crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-duckdb[file]_tpcds_q9.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q9"
---
+-----------+------------+------------+------------+------------+
| bucket1   | bucket2    | bucket3    | bucket4    | bucket5    |
+-----------+------------+------------+------------+------------+
| 39.645413 | 115.898137 | 191.634713 | 267.187999 | 341.986914 |
+-----------+------------+------------+------------+------------+
