crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-duckdb[file]_tpcds_q91.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q91"
---
+------------------+------------------+----------------+--------------+
| Call_Center      | Call_Center_Name | Manager        | Returns_Loss |
+------------------+------------------+----------------+--------------+
| AAAAAAAACAAAAAAA | Mid Atlantic     | Mark Hightower | 4046.80      |
| AAAAAAAABAAAAAAA | NY Metro         | Bob Belcher    | 615.62       |
| AAAAAAAAEAAAAAAA | North Midwest    | Larry Mccray   | 434.88       |
| AAAAAAAACAAAAAAA | Mid Atlantic     | Mark Hightower | 365.47       |
| AAAAAAAABAAAAAAA | NY Metro         | Bob Belcher    | 165.59       |
+------------------+------------------+----------------+--------------+
