crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-duckdb[file]_tpcds_q93.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q93"
---
+----------------+----------+
| ss_customer_sk | sumsales |
+----------------+----------+
| 192            | 0.00     |
| 411            | 0.00     |
| 717            | 0.00     |
| 775            | 0.00     |
| 916            | 0.00     |
| 1441           | 0.00     |
| 1722           | 0.00     |
| 1804           | 0.00     |
| 2403           | 0.00     |
| 2652           | 0.00     |
+----------------+----------+
