crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-duckdb[file]_tpcds_q94.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q94"
---
+-------------+---------------------+------------------+
| order count | total shipping cost | total net profit |
+-------------+---------------------+------------------+
| 5           | 14710.55            | 4963.03          |
+-------------+---------------------+------------------+
