crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-duckdb[file]_tpcds_q98.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q98"
---
+------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------------+-----------------+-------------+--------------+
| i_item_id        | i_item_desc                                                                                                                                                                                             | i_category | i_class     | i_current_price | itemrevenue | revenueratio |
+------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------------+-----------------+-------------+--------------+
| AAAAAAAAAABBAAAA | Positions see lovely months. Proper patterns may not appeal in a c                                                                                                                                      | Men        | accessories | 5.21            | 12361.87    | 0.988622     |
| AAAAAAAAAAFDAAAA | Blue, old hands cannot                                                                                                                                                                                  | Men        | accessories | 3.14            | 5248.29     | 0.419724     |
| AAAAAAAAABAAAAAA | Dominant, christian pp. may not raise                                                                                                                                                                   | Men        | accessories | 6.49            | 3549.43     | 0.283860     |
| AAAAAAAAABOCAAAA | Other neighbours might become; other, minimum streets may watch elderly, sure events. Records take most to a tanks. Possible troops give potentially in a waves. Also logical practices mean over       | Men        | accessories | 3.68            | 3810.14     | 0.304710     |
| AAAAAAAAACBEAAAA | Variations used to direct now. Controversial hours ought to admire then main clients; general, unable boys contain so for a prisoners. Little great profits cann                                        | Men        | accessories | 3.33            | 8374.14     | 0.669709     |
| AAAAAAAAACCDAAAA | Figures will not wish late primary, sure members. Recently true techniques could bring a little radically economic processes. Distant lips ought to go only civil words. Days claim aback in the kids;  | Men        | accessories | 4.09            | 17032.63    | 1.362159     |
| AAAAAAAAACGAAAAA | High, jewish legs should not direct existing, current points. Opposite effects make women. Organisers suggest mo                                                                                        | Men        | accessories | 6.86            | 1232.10     | 0.098535     |
| AAAAAAAAADAEAAAA | Rarely jewish assessments shall reduce still on board commercial values. Increased, different expressions ought to burn. Political sales tell. Studies contain necessary, great nights. Images will pr  | Men        | accessories | 4.20            | 4586.76     | 0.366819     |
| AAAAAAAAAEDAAAAA | Today previous months address. Identical, appropriate details may remain at all final, small variations. So middle                                                                                      | Men        | accessories | 87.37           | 3401.63     | 0.272040     |
| AAAAAAAAAEJDAAAA | Parameters try very into a copies. Good levels take victorian developments. Important, financial views may not recall ill simple numb                                                                   | Men        | accessories | 8.56            | 10272.60    | 0.821536     |
+------------------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+------------+-------------+-----------------+-------------+--------------+
