crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-federated_clickbench_q26.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: clickbench_q26"
---
+-----------------------------------------+
| SearchPhrase                            |
+-----------------------------------------+
|  береж                                  |
|  за русский стил видео какой            |
|  завод тандалищные прода                |
|  заочное по земли в обрезни и метро     |
|  заочное сад цены нарощения музыка визу |
|  зве                                    |
|  земные огурцы раб                      |
|  золотой сайт samsung                   |
|  прав                                   |
|  светы женске 2 сезон                   |
+-----------------------------------------+
