crates/test-framework/src/snapshot/snapshots/results/test_framework__spicetest__datasets__worker__spicecloud-federated_tpcds_q1.snap
---
source: crates/test-framework/src/spicetest/datasets/worker.rs
description: "Query: tpcds_q1"
---
+------------------+
| c_customer_id    |
+------------------+
| AAAAAAAAAAABBAAA |
| AAAAAAAAAAADAAAA |
| AAAAAAAAAAADBAAA |
| AAAAAAAAAAAHBAAA |
| AAAAAAAAAAAIAAAA |
| AAAAAAAAAABEBAAA |
| AAAAAAAAAABEBAAA |
| AAAAAAAAAABNAAAA |
| AAAAAAAAAACIAAAA |
| AAAAAAAAAACIAAAA |
+------------------+
